fix: correção do z-index do modal de URLs e total de registro a exibir

--- a/resources/react-app/src/components/SupplierURLModal/style.css
+++ b/resources/react-app/src/components/SupplierURLModal/style.css
@@ -8,6 +8,7 @@
 	display: grid;
 	place-items: center;
 	visibility: hidden;
+	z-index: 500;
 }
 #purchase_link_form {
 	width: 60%;
